update to most recent spring boot version, fix problems with circular dependencies and migrate code, multiple other fixes, cleanup pom